# mkdocs-advanced-seo

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  verify.py
docs/: .dates_cache.jsonl  index.md  test-seo.md
mkdocs_advanced_seo/: __init__.py  plugin.py
search/: search_index.json
test-seo/: index.html
