[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-advanced-seo"
version = "1.0.2"
description = "A comprehensive SEO plugin for MkDocs with Advanced Meta tags, Open Graph, Twitter Cards, JSON-LD, and more."
requires-python = ">=3.8"
keywords = ["mkdocs", "plugin", "seo", "meta", "open graph", "json-ld"]
readme = "README.md"
authors = [
  {name = "RainPPR", email = "2125773894@qq.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "mkdocs>=1.4.0",
  "beautifulsoup4>=4.11.0",
  "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://raineblog.dpdns.org/mkdocs-advanced-seo/"
Documentation = "https://raineblog.dpdns.org/mkdocs-advanced-seo/"
Repository = "https://github.com/raineblog/mkdocs-advanced-seo"
Issues = "https://github.com/raineblog/mkdocs-advanced-seo/issues"

[project.entry-points."mkdocs.plugins"]
advanced-seo = "mkdocs_advanced_seo.plugin:AdvancedSEOPlugin"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_advanced_seo"]
